--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,34 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="fr">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>
+    William David - Wine and Watch Shop !🍷&⌚️
+  </title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+  <link rel="stylesheet" href="assets/style/index.css">
+</head>
+
+<body>
+  <noscript>
+    <strong>
+      <h1>
+        Nous sommes désolé mais ce site ne peut fonctionner sans que les fonctions Javascript soit activées.
+        Merci de les activer afin de poursuivre votre navigation.
+      </h1>
+
+      <h1>
+        We're sorry but this site doesn't work properly without JavaScript enabled.
+        Please enable it to continue.
+      </h1>
+    </strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
